// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`paragraphs - no markdown 1`] = `
[
  <p
    className="mantine-focus-auto paragraph m_b6d8b162 mantine-Text-root"
    style={{}}
  >
    <span
      className="mantine-focus-auto m_b6d8b162 mantine-Text-root"
      data-inherit={true}
      style={{}}
    >
      foo
    </span>
  </p>,
  <p
    className="mantine-focus-auto paragraph m_b6d8b162 mantine-Text-root"
    style={{}}
  >
    <span
      className="mantine-focus-auto m_b6d8b162 mantine-Text-root"
      data-inherit={true}
      style={{}}
    >
      bar
    </span>
  </p>,
]
`;

exports[`paragraphs - with markdown 1`] = `
[
  <p
    className="mantine-focus-auto paragraph m_b6d8b162 mantine-Text-root"
    style={{}}
  >
    <span
      className="mantine-focus-auto m_b6d8b162 mantine-Text-root"
      data-inherit={true}
      style={{}}
    >
      foo
      <a
        className="mantine-focus-auto m_849cf0da m_b6d8b162 mantine-Text-root mantine-Anchor-root"
        data-underline="hover"
        href="http://www.somesite.com/"
        style={{}}
        target="_self"
      >
        a link
      </a>
    </span>
  </p>,
  <p
    className="mantine-focus-auto paragraph m_b6d8b162 mantine-Text-root"
    style={{}}
  >
    <span
      className="mantine-focus-auto m_b6d8b162 mantine-Text-root"
      data-inherit={true}
      style={{}}
    >
      bar
    </span>
  </p>,
]
`;

exports[`plain text - no markdown 1`] = `
[
  <p
    className="mantine-focus-auto paragraph m_b6d8b162 mantine-Text-root"
    style={{}}
  >
    <span
      className="mantine-focus-auto m_b6d8b162 mantine-Text-root"
      data-inherit={true}
      style={{}}
    >
      hello world
    </span>
  </p>,
]
`;

exports[`with markdown 1`] = `
[
  <p
    className="mantine-focus-auto paragraph m_b6d8b162 mantine-Text-root"
    style={{}}
  >
    <span
      className="mantine-focus-auto m_b6d8b162 mantine-Text-root"
      data-inherit={true}
      style={{}}
    >
      <a
        className="mantine-focus-auto m_849cf0da m_b6d8b162 mantine-Text-root mantine-Anchor-root"
        data-underline="hover"
        href="http://www.somesite.com/"
        style={{}}
        target="_self"
      >
        a link
      </a>
       hello world
    </span>
  </p>,
]
`;
